<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.dadus33</groupId>
    <artifactId>chatitem</artifactId>
    <version>2.3</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>Bungeecord</id>
            <url>https://repo.md-5.net/content/groups/public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
        	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>sonatype</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
		    <id>jitpack.io</id>
		    <url>https://jitpack.io</url>
		</repository>
		<repository>
		    <id>lang-utils-repo</id>
		    <url>https://raw.github.com/MascusJeoraly/LanguageUtils/mvn-repo/</url>
		</repository>
        <repository>
            <id>protocollib-repo</id>
            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
        </repository>
        <repository>
            <id>viaversion-repo</id>
            <url>https://repo.viaversion.com</url>
        </repository>
        <repository>
            <id>elikill-repo</id>
            <url>https://repo.eliapp.fr:8081/repository/internal/</url>
        </repository>
        <repository>
            <id>dv8tion</id>
            <url>https://m2.dv8tion.net/releases</url>
        </repository>
        <repository>
            <id>Scarsz-Nexus</id>
            <url>https://nexus.scarsz.me/content/groups/public/</url>
        </repository>  
    </repositories>


    <dependencies>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.17-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
	    <dependency>
	        <groupId>org.bukkit</groupId>
	        <artifactId>minecraft-server</artifactId>
	        <version>1.7.10</version>
	        <type>jar</type>
	        <scope>provided</scope>
	    </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.17.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.17.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
            <scope>compile</scope>
        </dependency>
	    <dependency>
		    <groupId>com.meowj</groupId>
		    <artifactId>LangUtils</artifactId>
		    <version>1.9</version>
            <scope>provided</scope>
	    </dependency>
        <dependency>
            <groupId>com.comphenix.protocol</groupId>
            <artifactId>ProtocolLib</artifactId>
            <version>5.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>us.myles</groupId>
            <artifactId>viaversion</artifactId>
            <version>3.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.shevchik</groupId>
            <artifactId>ProtocolSupport</artifactId>
            <version>1.18.2-1-dev</version>
            <scope>provided</scope>
        </dependency>
	    <dependency>
	        <groupId>io.netty</groupId>
	        <artifactId>netty-all</artifactId>
	        <version>4.1.53.Final</version>
	        <scope>provided</scope>
	    </dependency>
        <dependency>
            <groupId>com.github.GeyserMC</groupId>
            <artifactId>opennbt</artifactId>
            <version>1.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>dev.majek</groupId>
            <artifactId>HexNicks</artifactId>
            <version>2.2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.10.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bungeecord</artifactId>
            <version>4.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.discordsrv</groupId>
            <artifactId>discordsrv</artifactId>
            <version>1.24.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.willfp</groupId>
            <artifactId>EcoEnchants</artifactId>
            <version>8.57.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>ChatItem-${project.version}</finalName>
        <directory>./target</directory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>plugin.yml</include>
                    <include>config.yml</include>
                </includes>
                <filtering>true</filtering>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <release>17</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <minimizeJar>true</minimizeJar>
                            <relocations>
                                <relocation>
                                    <pattern>com.google.gson</pattern>
                                    <shadedPattern>me.dadus33.libs.gson</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>net.kyori.adventure.text.serializer.bungeecord</pattern>
                                    <shadedPattern>me.dadus33.libs.kyori.serializer.bungeecord</shadedPattern>
                                </relocation>
                            </relocations>
                            <filters>
                                <filter>
                                    <artifact>*</artifact>
                                    <excludes>
                                        <exclude>net.kyori:examination-api:**</exclude>
                                        <exclude>net.kyori:examination-string:**</exclude>
                                        <exclude>net.kyori:adventure-platform-api:**</exclude>
                                        <exclude>net.kyori:adventure-text-serializer-legacy:**</exclude>
                                        <exclude>net.kyori:adventure-text-serializer-gson:**</exclude>
                                        <exclude>net.kyori:adventure-platform-facet:**</exclude>
                                        <exclude>net.kyori:adventure-nbt:**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
                <configuration>
                    <outputDirectory>${export_dir}</outputDirectory>
                </configuration>
			</plugin>
        </plugins>
    </build>

</project>
